--- a/views/news-list.html
+++ b/views/news-list.html
@@ -1,8 +1,11 @@
 <div class="container">
+	<div class="row">
+		<input type="text" class="form-control" ng-model="searchT" ng-keydown="changeSearch($event, searchT)">
+	</div>
 	<div class="row" ng-repeat="article in articles">
-		<div class="col-lg-12">
+		<!-- <div class="col-lg-12">
 			<div class="row">
-				<a href="" ng-model="article-link">
+				<a ng-href="">
 					<h1 ng-model="article-name"></h1>
 				</a>
 				<a href="" ng-model="username-link">
@@ -14,6 +17,7 @@
 					<div ng-model="comment-num"></div>
 				</a>
 			</div>
-		</div>
+		</div> -->
+		<h1>Article</h1>
 	</div>
 </div>
