--- a/views/news-list.html
+++ b/views/news-list.html
@@ -1,23 +1,25 @@
-<div class="container">
+<div>
 	<div class="row">
-		<input type="text" class="form-control" ng-model="searchT" ng-keydown="changeSearch($event, searchT)">
+		<div class="col-lg-1">
+			<p>
+				Upvote
+			</p>
+		</div>
+		<div class="col-lg-11">
+			<div class="row">
+				<div class="col-lg-12">
+					<h2 class="article_title">This is a title. AMA!</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<small class="article_comments">492 comments</small>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="row" ng-repeat="article in articles">
-		<!-- <div class="col-lg-12">
-			<div class="row">
-				<a ng-href="">
-					<h1 ng-model="article-name"></h1>
-				</a>
-				<a href="" ng-model="username-link">
-					<h3 ng-model="username"></h3>
-				</a>
-			</div>
-			<div class="row">
-				<a href="" ng-model="comment-link">
-					<div ng-model="comment-num"></div>
-				</a>
-			</div>
-		</div> -->
-		<h1>Article</h1>
+	<div class="row">
+		<small class="article_date">Posted 10 hours ago </small>
+		<small class="article_author">by Username_Here</small>
 	</div>
 </div>
