--- a/views/news-list.html
+++ b/views/news-list.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-repeat="article in news">
 	<div class="row">
 		<div class="col-lg-1">
 			<p>
@@ -8,18 +8,18 @@
 		<div class="col-lg-11">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2 class="article_title">This is a title. AMA!</h2>
+					<h2 class="article_title">{{article.data.title}}</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-12">
-					<small class="article_comments">492 comments</small>
+					<small class="article_comments">{{article.data.num_comments}} comments</small>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<small class="article_date">Posted 10 hours ago </small>
-		<small class="article_author">by Username_Here</small>
+		<small class="article_date">Posted {{article.data.created}} hours ago</small>
+		<small class="article_author">by {{article.data.author}}</small>
 	</div>
 </div>
