--- a/css/style.less
+++ b/css/style.less
@@ -20,4 +20,16 @@
 	{
 		margin-bottom: 0;
 	}
+
+	.summary
+	{
+		background: transparent;
+		border: none;
+		text-align: left;
+
+		&:active
+		{
+			border: none;
+		}
+	}
 }
