--- a/views/news-list.html
+++ b/views/news-list.html
@@ -1,7 +1,10 @@
 <div>
 	<div ng-repeat="article in news" class="article">
 		<div class="row">
-			<div class="col-lg-10 col-lg-offset-1">
+			<div class="col-lg-1">
+				<img src="{{article.data.favicon}}" alt="">
+			</div>
+			<div class="col-lg-10">
 				<div class="row">
 					<div class="col-lg-12">
 							<a ng-href="{{article.data.url}}" target="_blank" class="article-url" ng-mouseover="showSummary(article)">
