Slight styling changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700);
 .article .article-url {
   color: black;
 }
 .article .article-url:hover {
   text-decoration: none;
+}
+.article .article-url .article-title {
+  font-size: 21px;
+  font-family: "Source Sans Pro", sans-serif;
 }
 .article .article-comment-url,
 .article .article-author-url {
@@ -13,12 +18,4 @@
 }
 .article hr {
   margin-bottom: 0;
-}
-.article .summary {
-  background: transparent;
-  border: none;
-  text-align: left;
-}
-.article .summary:active {
-  border: none;
 }
