--- a/views/news-list.html
+++ b/views/news-list.html
@@ -1,18 +1,15 @@
 <div>
 	<div ng-repeat="article in news" class="article">
 		<div class="row">
-			<div class="col-lg-1">
-				<img src="{{article.data.favicon}}" alt="">
-			</div>
-			<div class="col-lg-10">
+			<div class="col-lg-10 col-lg-offset-1">
 				<div class="row">
 					<div class="col-lg-12">
-							<a ng-href="{{article.data.url}}" target="_blank" class="article-url" ng-mouseover="showSummary(article)">
-								<h2 class="article_title">
-									{{article.data.title}}
-									<small>({{article.data.domain}})</small>
-								</h2>
-							</a>
+						<a ng-href="{{article.data.url}}" target="_blank" class="article-url" ng-mouseover="showSummary(article)">
+							<h2 class="article-title">
+								{{article.data.title}}
+								<small>({{article.data.domain}})</small>
+							</h2>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -20,9 +17,9 @@
 		<div class="row">
 			<div class="col-lg-10 col-lg-offset-1">
 				<p>	
-					<span class="article_date">Posted by </span>
+					<span class="article-date">Posted by </span>
 					<a ng-href="http://reddit.com/u/{{article.data.author}}" class="article-author-url">
-						<span class="article_author">{{article.data.author}}</span>
+						<span class="article-author">{{article.data.author}}</span>
 					</a>
 				</p>
 			</div>
@@ -30,13 +27,13 @@
 		<div class="row">
 			<div class="col-lg-10 col-lg-offset-1">
 				<a ng-href="http://reddit.com{{article.data.permalink}}" class="article-comment-url">
-					<small class="article_comments">{{article.data.num_comments}} comments</small>
+					<small class="article-comments">{{article.data.num_comments}} comments</small>
 				</a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-10 col-lg-offset-1">
-				<p>
+			<div class="col-lg-8 col-lg-offset-2">
+				<p class="article-summary">
 					{{article.data.summary}}
 				</p>
 			</div>
